# AlexaBot

./: LICENSE  README.md  eye_tracking.ipynb  face_detection.ipynb  webcamera.ipynb
CNN/: Keras-CNN-test.ipynb  Keras-CNN.py
CNN/.ipynb_checkpoints/: keras-cnn-test-checkpoint.ipynb
Hand_Detection/: Final_Version.py  Hand_Detect.ipynb
Hand_Detection/.ipynb_checkpoints/: hand_detect-checkpoint.ipynb
HoG/.ipynb_checkpoints/: hog-checkpoint.ipynb
HoG/Dlib detector/: RealTime.ipynb  Test.py  imgresize.ipynb  test.ipynb  train_detector.ipynb
dev/: CNN.ipynb  eye_tracking.ipynb  face_detection.ipynb
map_creation/src/: OccupancyGrid.cpp
people_tracker/src/: followerPI.cpp
rbx1_vision/: good_hand.py  ros2opencv2.py
rbx_norm/: CMakeLists.txt  package.xml
rbx_norm/launch/: hand_detect.launch  ros2opencv2.launch
rbx_norm/scripts/: .gitignore  Pedestriandetector.svm  Pedestriandetector1.svm  Pedestriandetector2.svm  Pedestriandetector33.svm  Pedestriandetector4.svm  camshift.py  good_eye_CNN.py  good_eye_NEWVERSION.py  good_features.py  good_hand.py  good_hand_CNN.py  good_hog.py  hand_detect.py  lk_tracker.py  nav1.py  ros2CV.py  ros2opencv2.py  script_good_features.py  timed_out_and_back.py  trigger.py
teleop_twist_keyboard/: CMakeLists.txt  cmd.json  jsonpub.py  package.xml  stateChangeVoice.py  teleop_voice.py  transform_json.py  voice_turtlebot.launch  waypoints.json
teleop_twist_keyboard/launch/: json2ros.launch  voice_turtlebot.launch
teleop_twist_keyboard/msg/: Alexabot.msg
turtlebot_follower/: follwer_config.rviz
(+7 files in other folders)
